package kr.spring.config.validation;

public class ValidationGroups {
    public interface NotNullGroup {};
    public interface PatternCheckGroup {};
    public interface SizeCheckGroup {};
    public interface TypeCheckGroup {};
}
