@startuml
class kr.spring.config.SecurityConfig {
+ PasswordEncoder getPasswordEncoder()
+ SecurityFilterChain filterChain(HttpSecurity)
}

class kr.spring.config.validation.ValidationGroups {
}
interface kr.spring.config.validation.ValidationGroups$NotNullGroup {
}
interface kr.spring.config.validation.ValidationGroups$PatternCheckGroup {
}
interface kr.spring.config.validation.ValidationGroups$SizeCheckGroup {
}
interface kr.spring.config.validation.ValidationGroups$TypeCheckGroup {
}
class kr.spring.config.EmailConfig {
- String host
- int port
- String username
- String password
- boolean auth
- int timeout
- boolean starttlsEnable
+ JavaMailSender javaMailSender()
- Properties getMailProperties()
}


class kr.spring.config.AppConfig {
- LoginCheckInterceptor loginCheck
- WriterCheckInterceptor writerCheck
- MemStatusCheckInterceptor memStatusCheck
+ LoginCheckInterceptor interceptor2()
+ MemStatusCheckInterceptor interceptor3()
+ WriterCheckInterceptor interceptor4()
+ void addInterceptors(InterceptorRegistry)
+ TilesConfigurer tilesConfigurer()
+ TilesViewResolver tilesViewResolver()
+ RestTemplate restTemplate()
+ ThreadPoolTaskScheduler taskScheduler()
+ Gson gson()
+ void registerWebSocketHandlers(WebSocketHandlerRegistry)
}


class kr.spring.config.SchedulerConfig {
+ ThreadPoolTaskScheduler taskScheduler()
}

interface kr.spring.config.validation.ValidationSequence {
}


kr.spring.config.validation.ValidationGroups +.. kr.spring.config.validation.ValidationGroups$NotNullGroup
kr.spring.config.validation.ValidationGroups +.. kr.spring.config.validation.ValidationGroups$PatternCheckGroup
kr.spring.config.validation.ValidationGroups +.. kr.spring.config.validation.ValidationGroups$SizeCheckGroup
kr.spring.config.validation.ValidationGroups +.. kr.spring.config.validation.ValidationGroups$TypeCheckGroup
org.springframework.web.servlet.config.annotation.WebMvcConfigurer <|.. kr.spring.config.AppConfig
org.springframework.web.socket.config.annotation.WebSocketConfigurer <|.. kr.spring.config.AppConfig
@enduml